--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 
-
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -15,147 +14,148 @@
     {% include "navbar.html" %}
     <!-- User can view shopping bag feature -->
     <div class="container mb-2">
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4 text-center">Cart</h2>
-                <hr>
-            </div>
+    <div class="row">
+        <div class="col">
+            <hr>
+            <h2 class="logo-font mb-4 text-center">Cart</h2>
+            <hr>
         </div>
-
-        <div class="row">
+    </div>
+    {% if bag_items %}
+        {% for item in bag_items %}
+            <div class="row">
             <div class="col">
-                {% if bag_items %}
-                    <div class="table-responsive rounded">
+            <div class="table-responsive rounded">
+            <!-- Logic to display each part of bag items -->
+            <!-- https://bootstrapious.com/p/bootstrap-shopping-cart -->
+            <div class="pb-5">
+            <div class="container">
+            <div class="row">
+                <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
 
-                        <!-- Logic to display each part of bag items -->
-                        {% for item in bag_items %}
-                            <!-- https://bootstrapious.com/p/bootstrap-shopping-cart -->
-                            <div class="pb-5">
-                            <div class="container">
-                            <div class="row">
-                                <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
+                    <!-- Shopping cart table -->
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th scope="col" class="border-0 bg-light">
+                                    <div class="p-2 px-3 text-uppercase">Product</div>
+                                </th>
+                                <th scope="col" class="border-0 bg-light">
+                                    <div class="py-2 text-uppercase">Price</div>
+                                </th>
+                                <th scope="col" class="border-0 bg-light">
+                                    <div class="py-2 text-uppercase">Quantity</div>
+                                </th>
+                                <th scope="col" class="border-0 bg-light">
+                                    <div class="py-2 text-uppercase">Remove</div>
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
 
-                                    <!-- Shopping cart table -->
-                                    <div class="table-responsive">
-                                        <table class="table">
-                                            <thead>
-                                            <tr>
-                                                <th scope="col" class="border-0 bg-light">
-                                                    <div class="p-2 px-3 text-uppercase">Product</div>
-                                                </th>
-                                                <th scope="col" class="border-0 bg-light">
-                                                    <div class="py-2 text-uppercase">Price</div>
-                                                </th>
-                                                <th scope="col" class="border-0 bg-light">
-                                                    <div class="py-2 text-uppercase">Quantity</div>
-                                                </th>
-                                                <th scope="col" class="border-0 bg-light">
-                                                    <div class="py-2 text-uppercase">Remove</div>
-                                                </th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            <tr>
-                                                <td class="border-0 align-middle">
-                                                    <strong>{{ item.tour.name }}</strong></td>
-                                                <td class="border-0 align-middle">
-                                                    <strong>£{{ item.tour.price }}</strong></td>
-                                                <td class="border-0 align-middle">
-                                                    <form class="form update-form" action="{% url 'adjust_bag' item.tour_id %}" method="POST">
-                                                        {% csrf_token %}
-                                                        <div class="form-group">
-                                                            <div class="input-group">
-                                                                <div class="input-group-prepend">
-                                                                    <button class="decrement-qty btn btn-sm rounded-0"
-                                                                            data-item_id="{{ item.tour_id }}"
-                                                                            id="decrement-qty_{{ item.tour_id }}">
+                            <tr>
+                                <td class="border-0 align-middle">
+                                    <strong>{{ item.tour.name }}</strong></td>
+                                <td class="border-0 align-middle">
+                                    <strong>£{{ item.tour.price }}</strong></td>
+                                <td class="border-0 align-middle">
+                                    <form class="form update-form" action="{% url 'adjust_bag' item.tour_id %}"
+                                          method="POST">
+                                        {% csrf_token %}
+                                        <div class="form-group">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <button class="decrement-qty btn btn-sm rounded-0"
+                                                            data-item_id="{{ item.tour_id }}"
+                                                            id="decrement-qty_{{ item.tour_id }}">
                                                             <span>
                                                                 <i class="fas fa-minus fa-sm"></i>
                                                             </span>
-                                                                    </button>
-                                                                </div>
-                                                                <input class="form-control form-control-sm qty_input"
-                                                                       type="number"
-                                                                       name="quantity" value="{{ item.quantity }}"
-                                                                       min="1" max="99"
-                                                                       data-item_id="{{ item.tour_id }}"
-                                                                       id="id_qty_{{ item.tour_id }}">
-                                                                <div class="input-group-append">
-                                                                    <button class="increment-qty btn btn-sm rounded-0"
-                                                                            data-item_id="{{ item.tour_id }}"
-                                                                            id="increment-qty_{{ item.tour_id }}">
+                                                    </button>
+                                                </div>
+                                                <input class="form-control form-control-sm qty_input"
+                                                       type="number"
+                                                       name="quantity" value="{{ item.quantity }}"
+                                                       min="1" max="99"
+                                                       data-item_id="{{ item.tour_id }}"
+                                                       id="id_qty_{{ item.tour_id }}">
+                                                <div class="input-group-append">
+                                                    <button class="increment-qty btn btn-sm rounded-0"
+                                                            data-item_id="{{ item.tour_id }}"
+                                                            id="increment-qty_{{ item.tour_id }}">
                                                             <span>
                                                                 <i class="fas fa-plus fa-sm"></i>
                                                             </span>
-                                                                    </button>
-                                                                </div>
-
-                                                            </div>
-                                                        </div>
-                                                        <a class="update-link text-info"><small>Update</small></a>
-                                                    </form>
-                                                </td>
-                                                <td class="border-0 align-middle"><a href="{% url 'remove_from_bag' item.tour_id %}" class="remove-item text-dark" id="remove_{{ item.tour_id }}"><i
-                                                        class="fa fa-trash"></i></a></td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                    <!-- End -->
-                                </div>
-                            </div>
-                        {% endfor %}
-                        <div class="row py-5 p-4 bg-white rounded shadow-sm">
-
-                            <div class="col-12">
-                                <div class="bg-light rounded-pill px-4 py-3 text-uppercase font-weight-bold">
-                                    Order summary
-                                </div>
-                                <div class="p-4">
-
-                                    <a href="{% url 'checkout' %}" class="btn btn-dark rounded-pill py-2 btn-block w-25">Proceed to
-                                        checkout</a>
-                                </div>
-                            </div>
-                        </div>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
+                                    <a class="update-link text-info"><small>Update</small></a>
+                                </td>
+                                <td class="border-0 align-middle"><a href="{% url 'remove_from_bag' item.tour_id %}"
+                                                                     class="remove-item text-dark"
+                                                                     id="remove_{{ item.tour_id }}"><i
+                                        class="fa fa-trash"></i></a></td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
 
-                    </div>
-                {% else %}
-                    <p class="lead mb-5">Your bag is empty.</p>
-                    <a href="{% url 'all_tours' %}" class="btn rounded-0 btn-lg">
+                </div>
+            </div>
+        {% endfor %}
+    <div class="row py-5 p-4 bg-white rounded shadow-sm">
+
+        <div class="col-12">
+            <div class="bg-light rounded-pill px-4 py-3 text-uppercase font-weight-bold">
+                Order summary
+            </div>
+            <div class="p-4">
+
+                <a href="{% url 'checkout' %}" class="btn btn-dark rounded-pill py-2 btn-block w-25">Proceed to
+                    checkout</a>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    </div>
+    {% else %}
+        <p class="lead mb-5">Your bag is empty.</p>
+        <a href="{% url 'all_tours' %}" class="btn rounded-0 btn-lg">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
-                        <span class="text-uppercase">View Tours</span>
-                    </a>
-                {% endif %}
-        </div>
-    </div>
+            <span class="text-uppercase">View Tours</span>
+        </a>
+    {% endif %}
+</div>
+</div>
 
 {% endblock %}
 
 {% block postloadjs %}
-    {{ block.super}}
-    {%  include "tours/includes/quantity_input_script.html" %}
+    {{ block.super }}
+    {% include "tours/includes/quantity_input_script.html" %}
 
     <script type="text/javascript">
-    //Update quantity in bag on click
-    $('.update-link').click(function(e) {
-        let form = $(this).prev('.update-form');
-        form.submit();
-    })
-    //remove item from bag on click
-    $('.remove-item').click(function(e) {
-        let itemId = $(this).attr('id').split('remove_')[1];
-        let url = `/bag/remove/${itemId}`;
+        //Update quantity in bag on click
+        $('.update-link').click(function (e) {
+            let form = $(this).prev('.update-form');
+            form.submit();
+        })
+        //remove item from bag on click
+        $('.remove-item').click(function (e) {
+            let itemId = $(this).attr('id').split('remove_')[1];
+            let url = `/bag/remove/${itemId}`;
 
-        $.post(url)
-         .done(function() {
-             location.reload();
-         });
-    })
+            $.post(url)
+                .done(function () {
+                    location.reload();
+                });
+        })
 
     </script>
 {% endblock %}
