--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -81,7 +81,7 @@
 							<span class="icon">
 								<i class="fas fa-exclamation-circle"></i>
 							</span>
-							<span>Your card will be charged <strong>£{{ order_total|floatformat:2 }}</strong></span>
+							<span>Your card will be charged <strong>£{{ total|floatformat:2 }}</strong></span>
 						</p>
 					</div>
                 </form>
