--- a/tours/templates/tours/tour_detail.html
+++ b/tours/templates/tours/tour_detail.html
@@ -93,7 +93,8 @@
 
         <h4>Reviews</h4>
         <p>
-
+            To write a review <a href="{% url 'account_login' %}">login.</a>
+            Don't have an account? Sign up <a href="{% url 'account_signup' %}">here.</a>
         </p>
         <div class="comments" style="padding: 10px;">
           <p class="font-weight-bold">
@@ -109,7 +110,7 @@
 
     <!-- Review Tour -->
     <div class="card card-body mb-5 shadow-sm">
-
+        {% if user.authenticated %}
             <div class="alert alert-success my-4" role="alert">
                 Your review is awaiting moderation
             </div>
@@ -124,7 +125,7 @@
                     <button type="submit" class="btn btn-info">Submit</button>
                 </form>
             </div>
-            </div>
+        {% endif %}
 
     </div>
 
